--- a/frontend/src/pages/buyer-book-list/buyer-book-list.html
+++ b/frontend/src/pages/buyer-book-list/buyer-book-list.html
@@ -12,7 +12,7 @@
     <ion-list>
         <ion-item *ngFor="let seller of sellers">
             <p>Seller: {{seller.name}}</p>
-            <p>Price: ${{seller.price}}</p>
+            <p>Price: {{seller.price | currency}}</p>
             <button ion-button color="primary" (click)="openPage(seller)">Request Book</button>
         </ion-item>
     </ion-list>
