--- a/frontend/src/pages/seller-confirmation/seller-confirmation.html
+++ b/frontend/src/pages/seller-confirmation/seller-confirmation.html
@@ -14,7 +14,7 @@
     <p>Semester: {{semester}}</p>
     <p>Book Name: {{book.title}}</p>
     <p>Author: {{book.author}}</p>
-    <p>Price: ${{price}}</p>
+    <p>Price: {{price | currency}}</p>
 
     <!-- <button ion-button (click)="Utils.home(this.navCtrl)">Home</button> -->
 </ion-content>
