--- a/src/pages/buyer-select-course/buyer-select-course.html
+++ b/src/pages/buyer-select-course/buyer-select-course.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -7,7 +7,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content text-center>
   <h1>Which class are you buying textbook for?</h1>
   <br>
   <button ion-button *ngFor="let course of courses" color="primary" (click)="openPage(course)">{{course}}</button>
