--- a/src/pages/select-role/select-role.html
+++ b/src/pages/select-role/select-role.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -8,7 +8,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content text-center>
 
   <h3>I am a...</h3>
 
