--- a/src/pages/seller-class-info/seller-class-info.html
+++ b/src/pages/seller-class-info/seller-class-info.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-navbar>
+    <ion-navbar color="primary">
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
@@ -7,7 +7,7 @@
     </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content text-center>
     <ion-list>
         <form (ngSubmit)="onSubmit()">    
             <ion-item>
