--- a/src/pages/seller-suggested-books/seller-suggested-books.html
+++ b/src/pages/seller-suggested-books/seller-suggested-books.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -7,7 +7,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content text-center>
     <h1>We found these textbooks for CS 4261</h1>
     <ion-card *ngFor="let book of suggestedBooks" (click)="openPage(book)">
         <ion-card-header>{{book.title}}</ion-card-header>
