--- a/src/pages/buyer-suggested-books/buyer-suggested-books.html
+++ b/src/pages/buyer-suggested-books/buyer-suggested-books.html
@@ -7,7 +7,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content text-center>
+<ion-content>
     <h1>We found these textbooks for CS 4261</h1>
     <ion-card *ngFor="let book of suggestedBooks" (click)="openPage(book)">
         <ion-card-header color="#4a5350">{{book.title}}</ion-card-header>
