--- a/src/pages/buyer-select-course/buyer-select-course.html
+++ b/src/pages/buyer-select-course/buyer-select-course.html
@@ -10,5 +10,5 @@
 <ion-content text-center>
   <h1>Which class are you buying textbook for?</h1>
   <br>
-  <button ion-button *ngFor="let course of courses" color="primary" (click)="openPage(course)">{{course}}</button>
+  <button ion-button *ngFor="let course of courses" color="primary" (click)="openPage(course)">{{course.course_id}}</button>
 </ion-content>
