--- a/src/pages/buyer-suggested-books/buyer-suggested-books.html
+++ b/src/pages/buyer-suggested-books/buyer-suggested-books.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content>
-    <h1>We found these textbooks for CS 4261</h1>
+    <h1>We found these textbooks for {{course}}</h1>
     <ion-card *ngFor="let book of suggestedBooks" (click)="openPage(book)">
         <ion-card-header color="#4a5350">{{book.title}}</ion-card-header>
         <ion-card-content>{{book.author}}</ion-card-content>
