--- a/src/pages/buyer-confirmation/buyer-confirmation.html
+++ b/src/pages/buyer-confirmation/buyer-confirmation.html
@@ -12,7 +12,7 @@
     <p>Book Name: {{book.title}}</p>
     <p>Author: {{book.author}}</p>
     <p>Seller: {{seller.name}}</p>
-    <p>Total: {{seller.price | currency}}</p>
+    <p>Total: {{seller.price}}</p>
 
     <!-- <button ion-button (click)="Utils.home(this.navCtrl)">Home</button> -->
 </ion-content>
