changed the buyer confirmation

--- a/src/pages/buyer-confirmation/buyer-confirmation.html
+++ b/src/pages/buyer-confirmation/buyer-confirmation.html
@@ -14,5 +14,5 @@
     <p>Seller: {{seller.name}}</p>
     <p>Total: {{seller.price}}</p>
 
-    <!-- <button ion-button (click)="Utils.home(this.navCtrl)">Home</button> -->
+    <button ion-button (click)="Utils.home(this.navCtrl)">Home</button>
 </ion-content>
