--- a/src/pages/seller-choose-functionality/seller-choose-functionality.html
+++ b/src/pages/seller-choose-functionality/seller-choose-functionality.html
@@ -8,12 +8,12 @@
 </ion-header>
 
 
-<ion-content text-center>
+<ion-content text-center padding-left padding-right>
 
   <h3>I want to...</h3>
 
   <p>
-    <button ion-button color="primary" (click)="sellBook()">Sell Textbook</button>
+    <button ion-button color="primary" (click)="sellBook()">Sell Textbook</button><br>
     <button ion-button color="primary" (click)="viewHistory()">View Pending/Sold Textbook</button>
   </p>
 
