--- a/src/pages/seller-set-price/seller-set-price.html
+++ b/src/pages/seller-set-price/seller-set-price.html
@@ -7,12 +7,12 @@
     </ion-navbar>
 </ion-header>
 
-<ion-content text-center>
+<ion-content text-center padding-left padding-right>
     <ion-list>
         <form (ngSubmit)="onSubmit()">    
             <ion-item>
                 <ion-label color="primary">I'm selling the book for</ion-label>
-                <ion-input type="number" [(ngModel)]="form.price" name="price" placeholder="$0.00"></ion-input>
+                <ion-input type="number" [(ngModel)]="form.price" name="price" placeholder="$0.00" required></ion-input>
             </ion-item>
             <button ion-button type="submit" color="primary">Next</button>
         </form>
