--- a/src/pages/seller-history/seller-history.html
+++ b/src/pages/seller-history/seller-history.html
@@ -7,24 +7,24 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
-    <h1>Pending Books</h1>
+<ion-content padding-left padding-right>
+    <h3>Pending Books</h3>
     <ion-card *ngFor="let book of pendingBooks">
     <ion-card-header color="#4a5350">{{book.title}}</ion-card-header>
     <ion-card-content>
       Author: {{book.author}}
       <br>
-      Price: {{book.price | currency}}
+      Price: {{book.price}}
     </ion-card-content>
     </ion-card>
 
-    <h1 text-left>Sold Books</h1>
+    <h3 text-left>Sold Books</h3>
     <ion-card *ngFor="let book of soldBooks">
     <ion-card-header color="#4a5350">{{book.title}}</ion-card-header>
     <ion-card-content>
       Author: {{book.author}}
       <br>
-      Price: {{book.price | currency}}
+      Price: {{book.price}}
     </ion-card-content>
     </ion-card>
 </ion-content>
