--- a/src/pages/seller-set-price/seller-set-price.html
+++ b/src/pages/seller-set-price/seller-set-price.html
@@ -11,7 +11,7 @@
     <ion-list>
         <form (ngSubmit)="onSubmit()">    
             <ion-item>
-                <ion-label color="primary">I'm selling the book for</ion-label>
+                <ion-label color="secondary">I'm selling the book for</ion-label>
                 <ion-input type="number" [(ngModel)]="form.price" name="price" placeholder="$0.00" required></ion-input>
             </ion-item>
             <button ion-button type="submit" color="primary">Next</button>
