Fixed bugs and errors

--- a/src/pages/seller-class-info/seller-class-info.html
+++ b/src/pages/seller-class-info/seller-class-info.html
@@ -16,11 +16,11 @@
             </ion-item>
             <ion-item>
                 <ion-label color="secondary">Instructor</ion-label>
-                <ion-input type="text" [(ngModel)]="form.instructor" name="instructor" placeholder="William Eason" required></ion-input>
+                <ion-input type="text" [(ngModel)]="form.instructor" name="instructor" placeholder="Eason, William Thomas" required></ion-input>
             </ion-item>
             <ion-item>
                 <ion-label color="secondary">Semester</ion-label>
-                <ion-input type="text" [(ngModel)]="form.semester" name="semester" placeholder="Fall 2016" required></ion-input>
+                <ion-input type="text" [(ngModel)]="form.semester" name="semester" placeholder="Fall 2016"></ion-input>
             </ion-item>
             <button ion-button type="submit" color="primary">Next</button>
         </form>
