--- a/src/pages/seller-confirmation/seller-confirmation.html
+++ b/src/pages/seller-confirmation/seller-confirmation.html
@@ -18,5 +18,5 @@
     <p>ISBN: {{book.isbn}}</p>
     <p>Price: {{price}}</p>
 
-    <!-- <button ion-button (click)="Utils.home(this.navCtrl)">Home</button> -->
+    <button ion-button (click)="popRoot()">Home</button>
 </ion-content>
