--- a/src/pages/seller-suggested-books/seller-suggested-books.html
+++ b/src/pages/seller-suggested-books/seller-suggested-books.html
@@ -29,15 +29,15 @@
         <form (ngSubmit)="onSubmit()">
             <ion-item>
                 <ion-label color="secondary">Textbook Name</ion-label>
-                <ion-input type="text" [(ngModel)]="form.title" name="title" placeholder="The Study of Mobile Apps" required></ion-input>
+                <ion-input type="text" [(ngModel)]="form.title" name="title" placeholder="The Study of Mobile Apps"></ion-input>
             </ion-item>
             <ion-item>
                 <ion-label color="secondary">Author</ion-label>
-                <ion-input type="text" [(ngModel)]="form.author" name="author" placeholder="William Eason" required></ion-input>
+                <ion-input type="text" [(ngModel)]="form.author" name="author" placeholder="William Eason"> </ion-input>
             </ion-item>
             <ion-item>
                 <ion-label color="secondary">Edition</ion-label>
-                <ion-input type="text" [(ngModel)]="form.edition" name="edition" placeholder="3rd" required></ion-input>
+                <ion-input type="text" [(ngModel)]="form.edition" name="edition" placeholder="3rd"></ion-input>
             </ion-item>
             <ion-item>
                 <ion-label color="secondary">ISBN</ion-label>
