--- a/src/pages/buyer-suggested-books/buyer-suggested-books.html
+++ b/src/pages/buyer-suggested-books/buyer-suggested-books.html
@@ -33,7 +33,11 @@
             </ion-item>
             <ion-item>
                 <ion-label color="secondary">Author</ion-label>
-                <ion-input type="text" [(ngModel)]="form.author" name="author" placeholder="William Eason" required></ion-input>
+                <ion-input type="text" [(ngModel)]="form.author" name="author" placeholder="" required></ion-input>
+            </ion-item>
+            <ion-item>
+                <ion-label color="secondary">Publisher</ion-label>
+                <ion-input type="text" [(ngModel)]="form.publisher" name="publisher" placeholder="" required></ion-input>
             </ion-item>
             <ion-item>
                 <ion-label color="secondary">Edition</ion-label>
