--- a/src/pages/seller-choose-functionality/seller-choose-functionality.html
+++ b/src/pages/seller-choose-functionality/seller-choose-functionality.html
@@ -14,7 +14,7 @@
 
   <p>
     <button ion-button color="primary" (click)="sellBook()">Sell Textbook</button><br>
-    <button ion-button color="primary" (click)="viewHistory()">View Pending/Sold Textbook</button>
+    <button ion-button color="primary" (click)="viewHistory()">View Pending/Sold Textbooks</button>
   </p>
 
 </ion-content>
