--- a/src/pages/buyer-book-list/buyer-book-list.html
+++ b/src/pages/buyer-book-list/buyer-book-list.html
@@ -12,9 +12,15 @@
     <h3>Listings for {{book.title}}</h3>
     <ion-list>
         <ion-item *ngFor="let seller of sellers">
+            <p>Author: {{book.author}}</p>
+            <p>Edition: {{book.edition}}</p>
+            <p>Publisher: {{book.publisher}}</p>
+            <p>ISBN: {{book.isbn}}</p><br>
             <p>Seller: {{seller.name}}</p>
+            <p>Condition: {{seller.condition}}</p>
+            <p>Amount of Writing: {{seller.markings}}</p>
             <p>Price: {{seller.price}}</p>
-            <button ion-button color="primary" (click)="openPage(seller)">Request</button>
+            <button ion-button color="primary" (click)="request(seller)" ngDisabled="seller.btnText === 'Requested'">{{seller.btnText}}</button>
         </ion-item>
     </ion-list>
   </div>
