--- a/src/pages/buyer-confirmation/buyer-confirmation.html
+++ b/src/pages/buyer-confirmation/buyer-confirmation.html
@@ -15,5 +15,5 @@
     <p>ISBN: {{book.isbn}}</p>
     <p>Price: {{seller.price}}</p>
 
-    <button ion-button (click)="popRoot()">Home</button>
+    <!-- <button ion-button (click)="Utils.home(this.navCtrl)">Home</button> -->
 </ion-content>
