--- a/src/pages/buyer-book-list/buyer-book-list.html
+++ b/src/pages/buyer-book-list/buyer-book-list.html
@@ -12,22 +12,19 @@
     <h3>Listings for {{book.title}}</h3>
     <ion-list>
         <ion-item *ngFor="let seller of sellers">
+            <p>Author: {{book.author}}</p>
+            <p>Edition: {{book.edition}}</p>
+            <p>Publisher: {{book.publisher}}</p>
+            <p>ISBN: {{book.isbn}}</p><br>
             <p>Seller: {{seller.name}}</p>
+            <p>Condition: {{seller.condition}}</p>
+            <p>Amount of Writing: {{seller.markings}}</p>
             <p>Price: {{seller.price}}</p>
-            <button ion-button color="primary" (click)="openPage(seller)">Request</button>
+            <button ion-button color="primary" (click)="request(seller)" ngDisabled="seller.btnText === 'Requested'">{{seller.btnText}}</button>
         </ion-item>
     </ion-list>
   </div>
   <div *ngIf="sellers.length == 0">
     <h3>Sorry! We don't have any listing for {{book.title}} right now. Come back later!</h3>
   </div>
-  <ion-list>
-        <form (ngSubmit)="onSubmit()">
-            <ion-item>
-                <ion-label color="secondary">Price</ion-label>
-                <ion-input type="number" [(ngModel)]="form.price" name="price" placeholder="$0.00" required></ion-input>
-            </ion-item>
-            <button ion-button type="submit" color="primary">Request</button>
-        </form>
-    </ion-list>
 </ion-content>
